--- a/Notebooks/Gant-Chart.ipynb
+++ b/Notebooks/Gant-Chart.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "72f57391",
    "metadata": {},
    "outputs": [
@@ -975,6 +975,8 @@
    ],
    "source": [
     "# Define the task data (Task name, Start week, End week)\n",
+    "\n",
+    "# Josh's mom HOOTTTTT\n",
     "tasks = [\n",
     "    (\"Project proposal & topic Selection\", 1, 2),\n",
     "    (\"Data Collection\", 2, 3),\n",
