--- a/Notebooks/Preprocessing&EDA.ipynb
+++ b/Notebooks/Preprocessing&EDA.ipynb
@@ -170,7 +170,7 @@
     }
    },
    "source": [
-    "The code below is only if our API would stop working, but do we need that for the uni project? I was trying to keep as simple code as possible"
+    "The code below is only if our API would stop working, but do we need that for the uni project? I was trying to keep the code as simple as possible"
    ]
   },
   {
