--- a/Notebooks/Final_Prediction&Strategies.ipynb
+++ b/Notebooks/Final_Prediction&Strategies.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "13c23a03",
+   "metadata": {},
+   "source": [
+    "# context \n",
+    "\n",
+    "This script performs the final prediction using the LSTM model selected during the model‐selection phase. It also implements our chosen strategies by fetching fresh data directly from the API, making the script fully self‐contained and runnable at any time to have recent strategy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9247c2d8",
    "metadata": {},
    "source": [
