Startegies in Spark

--- a/Notebooks/Stock_Market_Prediction_Setup.ipynb
+++ b/Notebooks/Stock_Market_Prediction_Setup.ipynb
@@ -707,7 +707,9 @@
     "from pyspark.ml import Pipeline\n",
     "from pyspark.ml.feature import VectorAssembler\n",
     "from pyspark.ml.regression import LinearRegression\n",
-    "from datetime import datetime, timedelta"
+    "from datetime import datetime, timedelta\n",
+    "from pyspark.sql.functions import col, lead, when\n",
+    "from pyspark.sql.window import Window"
    ]
   },
   {
@@ -2529,7 +2531,54 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define lookahead windows for each strategy\n",
+    "strategy_windows = {\n",
+    "    \"daily\": 1,\n",
+    "    \"monthly\": 21,\n",
+    "    \"quarterly\": 63,\n",
+    "    \"yearly\": 252\n",
+    "}\n",
+    "\n",
+    "# Apply logic for each strategy\n",
+    "for name, offset in strategy_windows.items():\n",
+    "    # Future price column\n",
+    "    future_col = f\"future_price_{name}\"\n",
+    "    spark_df = spark_df.withColumn(future_col, lead(\"close\", offset).over(Window.orderBy(\"date\")))\n",
+    "\n",
+    "    # Percentage return\n",
+    "    return_col = f\"return_{name}\"\n",
+    "    spark_df = spark_df.withColumn(\n",
+    "        return_col,\n",
+    "        ((col(future_col) - col(\"close\")) / col(\"close\")) * 100\n",
+    "    )\n",
+    "\n",
+    "    # Thresholds\n",
+    "    if name == \"daily\":\n",
+    "        buy, sell = 2.5, -2.5\n",
+    "    elif name == \"monthly\":\n",
+    "        buy, sell = 5.0, -3.0\n",
+    "    elif name == \"quarterly\":\n",
+    "        buy, sell = 8.0, -5.0\n",
+    "    elif name == \"yearly\":\n",
+    "        buy, sell = 15.0, -10.0\n",
+    "\n",
+    "    # Advice column\n",
+    "    advice_col = f\"{name}_advice\"\n",
+    "    spark_df = spark_df.withColumn(\n",
+    "        advice_col,\n",
+    "        when(col(return_col) >= buy, \"Buy\")\n",
+    "        .when(col(return_col) <= sell, \"Sell\")\n",
+    "        .otherwise(\"Hold\")\n",
+    "    )\n",
+    "\n",
+    "# Final selection of columns\n",
+    "strategy_columns = [\"date\", \"close\"] + [f\"{name}_advice\" for name in strategy_windows]\n",
+    "strategy_df = spark_df.select(*strategy_columns)\n",
+    "\n",
+    "# Show result\n",
+    "strategy_df.orderBy(\"date\").show(30, truncate=False)"
+   ]
   }
  ],
  "metadata": {
@@ -2548,8 +2597,14 @@
    "notebookName": "Stock_Market_Prediction_Setup",
    "widgets": {}
   },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
