Startegies in Spark & Finald predictions

--- a/Notebooks/Final_Prediction&Strategies.ipynb
+++ b/Notebooks/Final_Prediction&Strategies.ipynb
@@ -144,7 +144,9 @@
     "from tensorflow.keras.metrics import RootMeanSquaredError\n",
     "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "from pyspark.sql.functions import col, lead, when\n",
+    "from pyspark.sql.window import Window"
    ]
   },
   {
@@ -532,6 +534,67 @@
     "out = pd.concat([training_pdf, pd.DataFrame({\"date\": future_dates, \"close\": pred_prices})], ignore_index=True)\n",
     "spark_df = spark.createDataFrame(out)\n",
     "spark_df.orderBy(desc(\"date\")).limit(20).orderBy(\"date\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Startegies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define lookahead windows for each strategy\n",
+    "strategy_windows = {\n",
+    "    \"daily\": 1,\n",
+    "    \"monthly\": 21,\n",
+    "    \"quarterly\": 63,\n",
+    "    \"yearly\": 252\n",
+    "}\n",
+    "\n",
+    "# Apply logic for each strategy\n",
+    "for name, offset in strategy_windows.items():\n",
+    "    # Future price column\n",
+    "    future_col = f\"future_price_{name}\"\n",
+    "    spark_df = spark_df.withColumn(future_col, lead(\"close\", offset).over(Window.orderBy(\"date\")))\n",
+    "\n",
+    "    # Percentage return\n",
+    "    return_col = f\"return_{name}\"\n",
+    "    spark_df = spark_df.withColumn(\n",
+    "        return_col,\n",
+    "        ((col(future_col) - col(\"close\")) / col(\"close\")) * 100\n",
+    "    )\n",
+    "\n",
+    "    # Thresholds\n",
+    "    if name == \"daily\":\n",
+    "        buy, sell = 2.5, -2.5\n",
+    "    elif name == \"monthly\":\n",
+    "        buy, sell = 5.0, -3.0\n",
+    "    elif name == \"quarterly\":\n",
+    "        buy, sell = 8.0, -5.0\n",
+    "    elif name == \"yearly\":\n",
+    "        buy, sell = 15.0, -10.0\n",
+    "\n",
+    "    # Advice column\n",
+    "    advice_col = f\"{name}_advice\"\n",
+    "    spark_df = spark_df.withColumn(\n",
+    "        advice_col,\n",
+    "        when(col(return_col) >= buy, \"Buy\")\n",
+    "        .when(col(return_col) <= sell, \"Sell\")\n",
+    "        .otherwise(\"Hold\")\n",
+    "    )\n",
+    "\n",
+    "# Final selection of columns\n",
+    "strategy_columns = [\"date\", \"close\"] + [f\"{name}_advice\" for name in strategy_windows]\n",
+    "strategy_df = spark_df.select(*strategy_columns)\n",
+    "\n",
+    "# Show result\n",
+    "strategy_df.orderBy(\"date\").show(30, truncate=False)"
    ]
   }
  ],
