run the notebook with grant chart

--- a/Notebooks/Gant-Chart.ipynb
+++ b/Notebooks/Gant-Chart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e58ce2a8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "72f57391",
    "metadata": {},
    "outputs": [
@@ -25,19 +25,18 @@
        },
        "data": [
         {
-         "alignmentgroup": "True",
          "base": [
-          "2025-02-23T00:00:00",
-          "2025-03-02T00:00:00",
-          "2025-03-09T00:00:00",
-          "2025-03-16T00:00:00",
-          "2025-03-23T00:00:00",
-          "2025-04-06T00:00:00",
-          "2025-04-20T00:00:00",
-          "2025-04-27T00:00:00",
-          "2025-05-04T00:00:00",
-          "2025-05-11T00:00:00",
-          "2025-05-18T00:00:00"
+          "2025-02-23T00:00:00.000000000",
+          "2025-03-02T00:00:00.000000000",
+          "2025-03-09T00:00:00.000000000",
+          "2025-03-16T00:00:00.000000000",
+          "2025-03-23T00:00:00.000000000",
+          "2025-04-06T00:00:00.000000000",
+          "2025-04-20T00:00:00.000000000",
+          "2025-04-27T00:00:00.000000000",
+          "2025-05-04T00:00:00.000000000",
+          "2025-05-11T00:00:00.000000000",
+          "2025-05-18T00:00:00.000000000"
          ],
          "hovertemplate": "Start=%{base}<br>End=%{x}<br>Task=%{y}<extra></extra>",
          "legendgroup": "",
@@ -48,7 +47,6 @@
           }
          },
          "name": "",
-         "offsetgroup": "",
          "orientation": "h",
          "showlegend": false,
          "textposition": "auto",
@@ -267,57 +265,6 @@
             "type": "heatmap"
            }
           ],
-          "heatmapgl": [
-           {
-            "colorbar": {
-             "outlinewidth": 0,
-             "ticks": ""
-            },
-            "colorscale": [
-             [
-              0,
-              "#0d0887"
-             ],
-             [
-              0.1111111111111111,
-              "#46039f"
-             ],
-             [
-              0.2222222222222222,
-              "#7201a8"
-             ],
-             [
-              0.3333333333333333,
-              "#9c179e"
-             ],
-             [
-              0.4444444444444444,
-              "#bd3786"
-             ],
-             [
-              0.5555555555555556,
-              "#d8576b"
-             ],
-             [
-              0.6666666666666666,
-              "#ed7953"
-             ],
-             [
-              0.7777777777777778,
-              "#fb9f3a"
-             ],
-             [
-              0.8888888888888888,
-              "#fdca26"
-             ],
-             [
-              1,
-              "#f0f921"
-             ]
-            ],
-            "type": "heatmapgl"
-           }
-          ],
           "histogram": [
            {
             "marker": {
@@ -516,6 +463,17 @@
              }
             },
             "type": "scattergl"
+           }
+          ],
+          "scattermap": [
+           {
+            "marker": {
+             "colorbar": {
+              "outlinewidth": 0,
+              "ticks": ""
+             }
+            },
+            "type": "scattermap"
            }
           ],
           "scattermapbox": [
@@ -1043,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
