--- a/Notebooks/Gant-Chart.ipynb
+++ b/Notebooks/Gant-Chart.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "72f57391",
    "metadata": {},
    "outputs": [
@@ -25,18 +25,19 @@
        },
        "data": [
         {
+         "alignmentgroup": "True",
          "base": [
-          "2025-02-23T00:00:00.000000000",
-          "2025-03-02T00:00:00.000000000",
-          "2025-03-09T00:00:00.000000000",
-          "2025-03-16T00:00:00.000000000",
-          "2025-03-23T00:00:00.000000000",
-          "2025-04-06T00:00:00.000000000",
-          "2025-04-20T00:00:00.000000000",
-          "2025-04-27T00:00:00.000000000",
-          "2025-05-04T00:00:00.000000000",
-          "2025-05-11T00:00:00.000000000",
-          "2025-05-18T00:00:00.000000000"
+          "2025-02-23T00:00:00",
+          "2025-03-02T00:00:00",
+          "2025-03-09T00:00:00",
+          "2025-03-16T00:00:00",
+          "2025-03-23T00:00:00",
+          "2025-04-06T00:00:00",
+          "2025-04-20T00:00:00",
+          "2025-04-27T00:00:00",
+          "2025-05-04T00:00:00",
+          "2025-05-11T00:00:00",
+          "2025-05-18T00:00:00"
          ],
          "hovertemplate": "Start=%{base}<br>End=%{x}<br>Task=%{y}<extra></extra>",
          "legendgroup": "",
@@ -47,6 +48,7 @@
           }
          },
          "name": "",
+         "offsetgroup": "",
          "orientation": "h",
          "showlegend": false,
          "textposition": "auto",
@@ -73,10 +75,10 @@
           "Exploratory Analysis into Model Development",
           "Fine-Tuning/Optimizing Chosen Model",
           "Visualization of Results & Insights",
-          "Final Report Writing",
-          "Presentation preparation",
-          "Own set deadline",
-          "Presentation/Discussion period"
+          "Strategy building",
+          "Finalise the report and notebook for discusion",
+          "Adjust the code to the discusion",
+          "Finalize the report"
          ],
          "yaxis": "y"
         }
@@ -263,6 +265,57 @@
              ]
             ],
             "type": "heatmap"
+           }
+          ],
+          "heatmapgl": [
+           {
+            "colorbar": {
+             "outlinewidth": 0,
+             "ticks": ""
+            },
+            "colorscale": [
+             [
+              0,
+              "#0d0887"
+             ],
+             [
+              0.1111111111111111,
+              "#46039f"
+             ],
+             [
+              0.2222222222222222,
+              "#7201a8"
+             ],
+             [
+              0.3333333333333333,
+              "#9c179e"
+             ],
+             [
+              0.4444444444444444,
+              "#bd3786"
+             ],
+             [
+              0.5555555555555556,
+              "#d8576b"
+             ],
+             [
+              0.6666666666666666,
+              "#ed7953"
+             ],
+             [
+              0.7777777777777778,
+              "#fb9f3a"
+             ],
+             [
+              0.8888888888888888,
+              "#fdca26"
+             ],
+             [
+              1,
+              "#f0f921"
+             ]
+            ],
+            "type": "heatmapgl"
            }
           ],
           "histogram": [
@@ -463,17 +516,6 @@
              }
             },
             "type": "scattergl"
-           }
-          ],
-          "scattermap": [
-           {
-            "marker": {
-             "colorbar": {
-              "outlinewidth": 0,
-              "ticks": ""
-             }
-            },
-            "type": "scattermap"
            }
           ],
           "scattermapbox": [
@@ -940,10 +982,10 @@
     "    (\"Exploratory Analysis into Model Development\", 5, 7),\n",
     "    (\"Fine-Tuning/Optimizing Chosen Model\", 7, 10),\n",
     "    (\"Visualization of Results & Insights\", 9, 11),\n",
-    "    (\"Final Report Writing\", 10, 11),\n",
-    "    (\"Presentation preparation\", 11, 12),\n",
-    "    (\"Own set deadline\", 12, 13),\n",
-    "    (\"Presentation/Discussion period\", 13, 14),\n",
+    "    (\"Strategy building\", 10, 11),\n",
+    "    (\"Finalise the report and notebook for discusion\", 11, 12),\n",
+    "    (\"Adjust the code to the discusion\", 12, 13),\n",
+    "    (\"Finalize the report\", 13, 14),\n",
     "]\n",
     "\n",
     "# Create the DataFrame\n",
@@ -984,7 +1026,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "DM2425",
    "language": "python",
    "name": "python3"
   },
@@ -998,7 +1040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
