Added descriptions in markdowns

--- a/Notebooks/Prediction&Strategies_withRandomForest.ipynb
+++ b/Notebooks/Prediction&Strategies_withRandomForest.ipynb
@@ -155,7 +155,7 @@
     "from tensorflow.keras.metrics import RootMeanSquaredError\n",
     "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n"
    ]
   },
   {
@@ -323,6 +323,8 @@
     "\n",
     "- **One-shot dense output**  \n",
     "  A Dense layer predicts the entire forecast horizon at once, avoiding rolling forecasts.\n",
+    "\n",
+    "<br> In this LSTM model we are predicting 3 features: close, open and volume which are later used to calculate financial features that are helpful to build a random forest to suggest investment strategies\n",
     "\n",
     " "
    ]
@@ -539,22 +541,17 @@
     }
    ],
    "source": [
-    "# Step 1: Create a DataFrame from predictions\n",
     "pred_df = pd.DataFrame(\n",
     "    pred_prices, \n",
     "    columns=[\"close\", \"open\", \"volume\"]\n",
     ")\n",
     "pred_df[\"date\"] = future_dates\n",
     "\n",
-    "# Step 2: Concatenate with the original data\n",
     "out = pd.concat([training_pdf, pred_df], ignore_index=True)\n",
     "\n",
-    "# Step 3: Convert to Spark DataFrame\n",
-    "spark_df = spark.createDataFrame(out)\n",
     "\n",
-    "# Step 4: View most recent forecast\n",
-    "from pyspark.sql.functions import desc\n",
-    "spark_df.orderBy(desc(\"date\")).limit(20).orderBy(\"date\").show()\n"
+    "spark_df = spark.createDataFrame(out)\n",
+    "spark_df.orderBy(desc(\"date\")).limit(20).orderBy(\"date\").show()"
    ]
   },
   {
@@ -834,7 +831,7 @@
     "    featuresCol=\"features\"\n",
     ")\n",
     "\n",
-    "final_model = rf_best.fit(balanced_train_df)\n"
+    "final_model = rf_best.fit(balanced_train_df)"
    ]
   },
   {
@@ -959,6 +956,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All features are almost equally important. In the previous runs we found out that feature log_return was not that important comparing to other features. Thus, we decided to build a random forest without log_return."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -983,7 +987,6 @@
     "get_max_prob = udf(lambda v: float(max(v)), DoubleType())\n",
     "get_argmax = udf(lambda v: int(np.argmax(v)), IntegerType())\n",
     "\n",
-    "# Add max_prob and argmax_pred columns\n",
     "predictions = predictions.withColumn(\"max_prob\", get_max_prob(col(\"probability\"))) \\\n",
     "                         .withColumn(\"argmax_pred\", get_argmax(col(\"probability\")))\n",
     "\n",
@@ -1067,7 +1070,6 @@
     "predictions_pdf[\"portfolio_value\"] = portfolio_values\n",
     "\n",
     "# Create trade log DataFrame\n",
-    "import pandas as pd\n",
     "trade_df = pd.DataFrame(trade_log)"
    ]
   },
@@ -1155,6 +1157,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Random Forest-based trading strategy (targeting 5-day forward returns) achieved a final portfolio value of $1058.55, significantly outperforming the Buy & Hold baseline which concluded at $879.72. This represents an outperformance of 20.33%, marking a strong gain relative to passive investing.\n",
+    " The strategy executed 8 sell trades.  This suggests the 5-day horizon model was more responsive to short-term price dynamics, which leads to more frequent buy and sell decisions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1226,7 +1236,7 @@
     }
    ],
    "source": [
-    "print(f\"Predictions after filtering: {predictions_pdf.shape[0]}\")\n"
+    "print(f\"Predictions after filtering: {predictions_pdf.shape[0]}\")"
    ]
   },
   {
@@ -1245,7 +1255,7 @@
     }
    },
    "source": [
-    "## Monthly"
+    "## 21-days forward return "
    ]
   },
   {
@@ -1266,7 +1276,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "features = [\"pred_return\",\n",
     "            \"momentum_21d\", \n",
     "            \"return\", \n",
@@ -1476,7 +1485,6 @@
     "# Predict on Future Data with Probability Filtering \n",
     "predictions = final_model.transform(future_df)\n",
     "\n",
-    "# UDFs for extracting max probability and predicted label\n",
     "get_max_prob = udf(lambda v: float(max(v)), DoubleType())\n",
     "get_argmax = udf(lambda v: int(np.argmax(v)), IntegerType())\n",
     "\n",
@@ -1634,6 +1642,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Random Forest strategy (21-day forward stock returns), achieved a final portfolio value of $1006.68, outperforming the Buy & Hold benchmark, which ended at $879.72. This corresponds to an outperformance of approximately 14.43% over the investment period. During that period model recommended to buy and sell twice."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1667,23 +1682,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "53b0deb7-6b2f-4919-8304-d964594e601d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "* Higher Returns with Shorter Horizon:\n",
+    "<br>The 5-day strategy achieved a 20.33% outperformance, higher than the 21-day strategy’s 14.43%. This suggests that the model was better at identifying short-term price movements and relying on frequent trading opportunities.\n",
+    "\n",
+    "* Trade Frequency & Responsiveness:\n",
+    "<br>The 5-day model executed 4× more trades, indicating a more reactive and  aggressive approach. While this improves returns, it may also increase transaction costs and exposure to market noise.\n",
+    "\n",
+    "*  Risk vs Stability:\n",
+    "<br>The 21-day strategy, with only 2 trades, followed a more stable and conservative path. It likely incurred lower trading costs and reduced the chance of overfitting, but also captured fewer opportunities.\n",
+    "\n",
+    "<br> Both strategies outperform Buy & Hold, showing that machine learning can enhance portfolio performance. The 5-day model is better suited for active traders seeking higher returns and can manage execution costs, while the 21-day model may appeal to more conservative investors preferring fewer trades and longer holding periods."
+   ]
   }
  ],
  "metadata": {
