--- a/Notebooks/Prediction&Strategies_withRandomForest.ipynb
+++ b/Notebooks/Prediction&Strategies_withRandomForest.ipynb
@@ -589,50 +589,18 @@
     }
    },
    "source": [
-    "### Predictions using the Decision Trees "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1128bf44-a201-464d-8e13-3c9a7aa80861",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Create Target Labels (Buy / Sell / Hold). We simulate the label based on the next day’s return (as if we were simulating strategy)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "30065c14-7184-46ae-b366-998daf6c15e2",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "We’ll simulate a basic trading strategy:\n",
-    "Start with an initial cash balance.\n",
-    "Buy: invest all cash into stock at current price.\n",
-    "Sell: sell all holdings at current price.\n",
-    "Hold: do nothing.\n",
-    "Track your total portfolio value (cash + stock).\n",
+    "#  Random Forest-based Trading Strategy\n",
+    "\n",
+    "This notebook implements a trading strategy using a **Random Forest Classifier** to predict short- and medium-term stock movements.\n",
+    "\n",
+    "The model is trained on engineered financial features derived from price and volume data, such as moving averages, returns, volatility, and momentum indicators. Based on these features, the Random Forest predicts one of three actions — **Buy**, **Sell**, or **Hold** — for two investment horizons:\n",
+    "\n",
+    "- **5-Day Forward Return**: A short-term strategy with more frequent trades, focusing on quick market fluctuations.\n",
+    "- **21-Day Forward Return**: A more conservative, longer-term strategy that capture broader price movements.\n",
+    "\n",
+    "Trades are only executed when the model's prediction confidence exceeds a certain threshold (40% for 5-day return, and 45% for 21-day return), \n",
+    "\n",
+    "Performance is evaluated against a **Buy & Hold benchmark**, highlighting the ability of the model to outperform passive investing. The strategy includes a simulation of portfolio evolution, tracking both the strategy and benchmark values over time.\n",
     "\n"
    ]
   },
@@ -655,7 +623,7 @@
     "Assumptions:\n",
     "* You can only hold cash or stock at any time (no partial holdings).\n",
     "* No trading fees for simplicity.\n",
-    "* Actions are taken on the same day as prediction (can be changed if needed)."
+    "* Actions are taken on the same day as prediction"
    ]
   },
   {
